With comparison table

--- a/SVM_P_onEmailText.ipynb
+++ b/SVM_P_onEmailText.ipynb
@@ -318,6 +318,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Algorithm Comparison Table"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "|Algorithm|Training time|Predicting time|Accuracy|\n",
+    "|---------|-------------|---------------|--------|\n",
+    "|Naive Bayes|2.468s|0.428s|97.3265%|\n",
+    "|SVM|269.458s|27.6s|99.0898%|\n",
+    "|Decision Tree Classifier|138.329s|0.069s|97.8953%|\n",
+    "|Multilayer Perceptron|0.991s|0.038s|49.2036%|\n",
+    "|KNN|8.421s|310.491s|88.1114%|"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Data Visualization\n",
     "\n",
     "Since the features was a set of probabilites of words as phrases for each person, one feature was not a function of another. Hence it was not possible to show the data and in terms of a scatter plot with one variable as a function of another.\n",
