--- a/SVM_P_onEmailText.ipynb
+++ b/SVM_P_onEmailText.ipynb
@@ -338,6 +338,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Conclusion\n",
+    "\n",
+    "It seems from the comparison that in a use case where the data consists of set of words and phrases with the probability of its usage by two different people, SVM is the winning algorithm in terms of accuracy and Multiple layer perceptron in terms of predicting time. However, both algorithms are probably not appropriate since the have huge time and accuracy trade offs respectively. Consierding all parameters it seems as though a Gaussian Naive Bayes is the best classifier for this data."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Data Visualization\n",
     "\n",
     "Since the features was a set of probabilites of words as phrases for each person, one feature was not a function of another. Hence it was not possible to show the data and in terms of a scatter plot with one variable as a function of another.\n",
